# roidetyolo_esp32cam

./: .gitignore  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  TODO.md  package-lock.json  start_servers.ps1  t-Path backendrequirements.txt
History/: 2024-12-14_status_interval_alarm_history.md  ASR_FEATURES_IMPLEMENTATION_2025-01-XX.md  ESP_IDF_MIGRATION_2025-12-10.md
automation/: .env.example  README.md  analyze.py  base_page.py  config.py  pom_analyzer.py  pytest.ini  requirements.txt
backend/: .gitignore  API_DOCUMENTATION.md  FIX_BACKEND_HOST.md  README.md  SETUP_GUIDE.md  check_server_binding.ps1  env.example  generate_test_report.py  init_db.py  migrate_phase3.ps1  migrate_phase3.py  migrate_phase3_powershell.md  pytest.ini  register_device.py  requirements-core.txt  requirements.txt  reset_db.sql  run.bat  setup.sql  setup_firewall_port_8000.ps1  simple_mqtt_broker.py  test_all_apis.py  test_api.py
docker/: README.md
docs/: API_TEST_REPORT.md  API_TEST_RESULTS_TEMPLATE.md  CODE_REVIEW_2025-01.md  CODE_REVIEW_REPORT.md  CURRENT_CODE_REVIEW_AND_PLAN.md  CURRENT_PROJECT_STATUS_REVIEW.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_2025-01.md  (+10 more)
firmware_idf/main/: CMakeLists.txt  application.cc  application.h  config.h  device_state.h  device_state_machine.cc  device_state_machine.h  idf_component.yml  main.cc  pins.h
firmware_idf/main/asr/: asr_service.cc  asr_service.h
firmware_idf/main/audio/: audio_codec.cc  audio_codec.h  audio_service.cc  audio_service.h  wav_player.cc  wav_player.h
firmware_idf/main/camera/: camera_service.cc  camera_service.h  camera_stream_server.cc  camera_stream_server.h  rtsp_server.cc  rtsp_server.h
firmware_idf/main/display/: display_service.cc  display_service.h
firmware_idf/main/input/: button_service.cc  button_service.h
firmware_idf/main/network/: backend_client.cc  backend_client.h  mqtt_client.cc  mqtt_client.h  mqtt_client_wrapper.cc  mqtt_client_wrapper.h  websocket_client.cc  websocket_client.h  wifi_manager.cc  wifi_manager.h
firmware_idf/main/power/: power_manager.cc  power_manager.h
firmware_idf/main/status/: status_reporter.cc  status_reporter.h
(+1658 files in other folders)
